@@ -43,8 +43,9 @@ export(
        matlab2POSIXt,
        match.bytes,
        matrix.smooth,
-       oce.axis.POSIXct,
+       oce.approx,
        oce.as.POSIXlt,
+       oce.axis.POSIXct,
        oce.colors.gebco,
        oce.colors.palette,
        oce.colors.jet,
