@@ -1,3 +1,19 @@
+oce.approx <- function(x, y, xout, n=1, m=1) # FIXME: make n and m match ref
+{
+    if (missing(x)) stop("must supply x")
+    if (missing(y)) stop("must supply y")
+    lx <- length(x)
+    ly <- length(y)
+    if (lx != ly) stop("length of x (", lx, ") and y (", ly, ") must agree")
+    if (any(is.na(x))) stop("must not have any NA values in x")
+    if (any(is.na(y))) stop("must not have any NA values in y")
+    if (missing(xout))
+        xout <- seq(min(x), max(x), length.out=lx)
+    else
+        if (any(is.na(xout))) stop("must not have any NA values in xout")
+    .Call("oce_approx", x=x, y=y, xout=xout, n=n, m=m);
+}
+
 matrix.smooth <- function(m)
 {
     if (missing(m)) stop("must provide matrix 'm'")
